@@ -1,3 +1,8 @@
+2013-03-29
+
+	* src/summaryview.c: summary_junk(): select proper junk folder instead
+	  of default one.
+
 2013-03-28
 
 	* src/quote_fmt_parse.y: prohibit warnings when target message does
